--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "proptypes": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
